# effective-c

./: .gitignore  README.md  configure  makefile
.github/workflows/: c-cpp.yml
chapter-1/: hello.c
chapter-10/: CMakeLists.txt  build.sh  compile.sh  create-static-library.sh  driver.c  isprime.c  isprime.h  link.sh
chapter-10/prime/: cmake_install.cmake
chapter-10/prime/include/PrimalityUtilities/: isprime.h
chapter-10/prime/lib/: CMakeLists.txt
chapter-10/prime/lib/PrimalityUtilities/: CMakeLists.txt  isprime.c
chapter-10/prime/src/: CMakeLists.txt  driver.c
chapter-11/: README.md  bounds.c  bounds.c.fails  clear.c  error.c  install-safeclib.sh  packed.c  packed.c.fails
chapter-2/: alignment.c  counter.c  excercise_1.c  excercise_2.c  scope.c  static.c  swap.c  swap1.c  variables.c
chapter-3/: fpclassify.c  safe_conversions.c  signedness.c  ub.c
chapter-4/: alignof-assert.c  alignof_assert.c  orderofeval.c  safe-shift.c
chapter-5/: excercise_1.c  excercise_1.c.fails  excercise_2.c  excercise_3.c  goto-chain.c  switch.c
chapter-6/: dmalloc.c  excercise_1.c  excercise_1.c.fails  incomplete_array_type.c  malloc.c  matrix.c  side-effects.c
chapter-8/: fgetpos_fsetpos.c  fread.c  ftell_fseek.c  fwrite.c  signals.c  signals.txt
chapter-9/: bar.h  foo.c  generic_selection_expression.c  macros.c
